ipvs-mode-iptables-rules.txt
# Generated by iptables-save v1.4.21 on Mon Aug 26 10:08:53 2024
*raw
:PREROUTING ACCEPT [691852560:136281942176]
:OUTPUT ACCEPT [476423750:116630028896]
:cali-OUTPUT - [0:0]
:cali-PREROUTING - [0:0]
:cali-from-host-endpoint - [0:0]
:cali-rpf-skip - [0:0]
:cali-to-host-endpoint - [0:0]
-A PREROUTING -m comment --comment "cali:6gwbT8clXdHdC1b1" -j cali-PREROUTING
-A OUTPUT -m comment --comment "cali:tVnHkvAo15HuiPy0" -j cali-OUTPUT
-A cali-OUTPUT -m comment --comment "cali:njdnLwYeGqBJyMxW" -j MARK --set-xmark 0x0/0xf0000
-A cali-OUTPUT -m comment --comment "cali:rz86uTUcEZAfFsh7" -j cali-to-host-endpoint
-A cali-OUTPUT -m comment --comment "cali:pN0F5zD0b8yf9W1Z" -m mark --mark 0x10000/0x10000 -j ACCEPT
-A cali-PREROUTING -m comment --comment "cali:XFX5xbM8B9qR10JG" -j MARK --set-xmark 0x0/0xf0000
-A cali-PREROUTING -i cali+ -m comment --comment "cali:EWMPb0zVROM-woQp" -j MARK --set-xmark 0x40000/0x40000
-A cali-PREROUTING -m comment --comment "cali:PWuxTAIaFCtsg5Qa" -m mark --mark 0x40000/0x40000 -j cali-rpf-skip
-A cali-PREROUTING -m comment --comment "cali:fSSbGND7dgyemWU7" -m mark --mark 0x40000/0x40000 -m rpfilter --validmark --invert -j DROP
-A cali-PREROUTING -m comment --comment "cali:ImU0-4Rl2WoOI9Ou" -m mark --mark 0x0/0x40000 -j cali-from-host-endpoint
-A cali-PREROUTING -m comment --comment "cali:lV4V2MPoMBf0hl9T" -m mark --mark 0x10000/0x10000 -j ACCEPT
COMMIT
# Completed on Mon Aug 26 10:08:53 2024
# Generated by iptables-save v1.4.21 on Mon Aug 26 10:08:53 2024
*filter
:INPUT ACCEPT [921:132594]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [917:145386]
:DOCKER - [0:0]
:DOCKER-ISOLATION-STAGE-1 - [0:0]
:DOCKER-ISOLATION-STAGE-2 - [0:0]
:DOCKER-USER - [0:0]
:KUBE-EXTERNAL-SERVICES - [0:0]
:KUBE-FIREWALL - [0:0]
:KUBE-FORWARD - [0:0]
:KUBE-IPVS-FILTER - [0:0]
:KUBE-KUBELET-CANARY - [0:0]
:KUBE-NODE-PORT - [0:0]
:KUBE-NODEPORTS - [0:0]
:KUBE-PROXY-CANARY - [0:0]
:KUBE-PROXY-FIREWALL - [0:0]
:KUBE-SERVICES - [0:0]
:KUBE-SOURCE-RANGES-FIREWALL - [0:0]
:cali-FORWARD - [0:0]
:cali-INPUT - [0:0]
:cali-OUTPUT - [0:0]
:cali-cidr-block - [0:0]
:cali-forward-check - [0:0]
:cali-forward-endpoint-mark - [0:0]
:cali-from-endpoint-mark - [0:0]
:cali-from-hep-forward - [0:0]
:cali-from-host-endpoint - [0:0]
:cali-from-wl-dispatch - [0:0]
:cali-from-wl-dispatch-b - [0:0]
:cali-fw-cali264ca4ab91d - [0:0]
:cali-fw-cali8f0eab1f8f3 - [0:0]
:cali-fw-calib8398c29e44 - [0:0]
:cali-fw-calibf639a2fbff - [0:0]
:cali-fw-calie82e19a348e - [0:0]
:cali-fw-califd92bc1f55b - [0:0]
:cali-pi-_3CJ_GmvE9pcCktVJ2ep - [0:0]
:cali-pri-_4yi5_iSUAwsU8zMHTk - [0:0]
:cali-pri-_kJqfZpgUe7r2t4A-14 - [0:0]
:cali-pri-_nzzjLvInId1gPHmQz_ - [0:0]
:cali-pri-_og73BH3DuNOZrbBKFW - [0:0]
:cali-pri-_u2Tn2rSoAPffvE7JO6 - [0:0]
:cali-pri-kns.calico-system - [0:0]
:cali-pri-kns.kube-system - [0:0]
:cali-pro-_4yi5_iSUAwsU8zMHTk - [0:0]
:cali-pro-_kJqfZpgUe7r2t4A-14 - [0:0]
:cali-pro-_nzzjLvInId1gPHmQz_ - [0:0]
:cali-pro-_og73BH3DuNOZrbBKFW - [0:0]
:cali-pro-_u2Tn2rSoAPffvE7JO6 - [0:0]
:cali-pro-kns.calico-system - [0:0]
:cali-pro-kns.kube-system - [0:0]
:cali-set-endpoint-mark - [0:0]
:cali-set-endpoint-mark-b - [0:0]
:cali-sm-cali264ca4ab91d - [0:0]
:cali-sm-cali8f0eab1f8f3 - [0:0]
:cali-sm-calib8398c29e44 - [0:0]
:cali-sm-calibf639a2fbff - [0:0]
:cali-sm-calie82e19a348e - [0:0]
:cali-sm-califd92bc1f55b - [0:0]
:cali-to-hep-forward - [0:0]
:cali-to-host-endpoint - [0:0]
:cali-to-wl-dispatch - [0:0]
:cali-to-wl-dispatch-b - [0:0]
:cali-tw-cali264ca4ab91d - [0:0]
:cali-tw-cali8f0eab1f8f3 - [0:0]
:cali-tw-calib8398c29e44 - [0:0]
:cali-tw-calibf639a2fbff - [0:0]
:cali-tw-calie82e19a348e - [0:0]
:cali-tw-califd92bc1f55b - [0:0]
:cali-wl-to-host - [0:0]
-A INPUT -m comment --comment "cali:Cz_u1IQiXIMmKD4c" -j cali-INPUT
-A INPUT -m comment --comment "kubernetes ipvs access filter" -j KUBE-IPVS-FILTER
-A INPUT -m comment --comment "kube-proxy firewall rules" -j KUBE-PROXY-FIREWALL
-A INPUT -m comment --comment "kubernetes health check rules" -j KUBE-NODE-PORT
-A INPUT -j KUBE-FIREWALL
-A INPUT -m conntrack --ctstate NEW -m comment --comment "kubernetes load balancer firewall" -j KUBE-PROXY-FIREWALL
-A INPUT -m comment --comment "kubernetes health check service ports" -j KUBE-NODEPORTS
-A INPUT -m conntrack --ctstate NEW -m comment --comment "kubernetes externally-visible service portals" -j KUBE-EXTERNAL-SERVICES
-A FORWARD -m comment --comment "cali:wUHhoiAYhphO9Mso" -j cali-FORWARD
-A FORWARD -m comment --comment "kube-proxy firewall rules" -j KUBE-PROXY-FIREWALL
-A FORWARD -j DOCKER-USER
-A FORWARD -j DOCKER-ISOLATION-STAGE-1
-A FORWARD -o docker0 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -o docker0 -j DOCKER
-A FORWARD -i docker0 ! -o docker0 -j ACCEPT
-A FORWARD -i docker0 -o docker0 -j ACCEPT
-A FORWARD -m conntrack --ctstate NEW -m comment --comment "kubernetes load balancer firewall" -j KUBE-PROXY-FIREWALL
-A FORWARD -m comment --comment "kubernetes forwarding rules" -j KUBE-FORWARD
-A FORWARD -m conntrack --ctstate NEW -m comment --comment "kubernetes service portals" -j KUBE-SERVICES
-A FORWARD -m conntrack --ctstate NEW -m comment --comment "kubernetes externally-visible service portals" -j KUBE-EXTERNAL-SERVICES
-A FORWARD -m comment --comment "cali:S93hcgKJrXEqnTfs" -m comment --comment "Policy explicitly accepted packet." -m mark --mark 0x10000/0x10000 -j ACCEPT
-A FORWARD -m comment --comment "cali:mp77cMpurHhyjLrM" -j MARK --set-xmark 0x10000/0x10000
-A OUTPUT -m comment --comment "cali:tVnHkvAo15HuiPy0" -j cali-OUTPUT
-A OUTPUT -j KUBE-FIREWALL
-A OUTPUT -m conntrack --ctstate NEW -m comment --comment "kubernetes load balancer firewall" -j KUBE-PROXY-FIREWALL
-A OUTPUT -m conntrack --ctstate NEW -m comment --comment "kubernetes service portals" -j KUBE-SERVICES
-A DOCKER-ISOLATION-STAGE-1 -i docker0 ! -o docker0 -j DOCKER-ISOLATION-STAGE-2
-A DOCKER-ISOLATION-STAGE-1 -j RETURN
-A DOCKER-ISOLATION-STAGE-2 -o docker0 -j DROP
-A DOCKER-ISOLATION-STAGE-2 -j RETURN
-A DOCKER-USER -j RETURN
-A KUBE-FIREWALL ! -s 127.0.0.0/8 -d 127.0.0.0/8 -m comment --comment "block incoming localnet connections" -m conntrack ! --ctstate RELATED,ESTABLISHED,DNAT -j DROP
-A KUBE-FORWARD -m comment --comment "kubernetes forwarding rules" -m mark --mark 0x4000/0x4000 -j ACCEPT
-A KUBE-FORWARD -m comment --comment "kubernetes forwarding conntrack rule" -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A KUBE-IPVS-FILTER -m set --match-set KUBE-LOAD-BALANCER dst,dst -j RETURN
-A KUBE-IPVS-FILTER -m set --match-set KUBE-CLUSTER-IP dst,dst -j RETURN
-A KUBE-IPVS-FILTER -m set --match-set KUBE-EXTERNAL-IP dst,dst -j RETURN
-A KUBE-IPVS-FILTER -m conntrack --ctstate NEW -m set --match-set KUBE-IPVS-IPS dst -j REJECT --reject-with icmp-port-unreachable
-A KUBE-NODE-PORT -m comment --comment "Kubernetes health check node port" -m set --match-set KUBE-HEALTH-CHECK-NODE-PORT dst -j ACCEPT
-A KUBE-SOURCE-RANGES-FIREWALL -j DROP
-A cali-FORWARD -m comment --comment "cali:vjrMJCRpqwy5oRoX" -j MARK --set-xmark 0x0/0xe0000
-A cali-FORWARD -m comment --comment "cali:A_sPAO0mcxbT9mOV" -m mark --mark 0x0/0x10000 -j cali-from-hep-forward
-A cali-FORWARD -i cali+ -m comment --comment "cali:8ZoYfO5HKXWbB3pk" -j cali-from-wl-dispatch
-A cali-FORWARD -o cali+ -m comment --comment "cali:jdEuaPBe14V2hutn" -j cali-to-wl-dispatch
-A cali-FORWARD -m comment --comment "cali:12bc6HljsMKsmfr-" -j cali-to-hep-forward
-A cali-FORWARD -m comment --comment "cali:NOSxoaGx8OIstr1z" -j cali-cidr-block
-A cali-INPUT -p ipv4 -m comment --comment "cali:PajejrV4aFdkZojI" -m comment --comment "Allow IPIP packets from Calico hosts" -m set --match-set cali40all-hosts-net src -m addrtype --dst-type LOCAL -j ACCEPT
-A cali-INPUT -p ipv4 -m comment --comment "cali:_wjq-Yrma8Ly1Svo" -m comment --comment "Drop IPIP packets from non-Calico hosts" -j DROP
-A cali-INPUT -m comment --comment "cali:ss8lEMQsXi-s6qYT" -j MARK --set-xmark 0x0/0xfff00000
-A cali-INPUT -m comment --comment "cali:PgIW-V0nEjwPhF_8" -j cali-forward-check
-A cali-INPUT -m comment --comment "cali:QMJlDwlS0OjHyfMN" -m mark ! --mark 0x0/0xfff00000 -j RETURN
-A cali-INPUT -i cali+ -m comment --comment "cali:nDRe73txrna-aZjG" -g cali-wl-to-host
-A cali-INPUT -m comment --comment "cali:iX2AYvqGXaVqwkro" -m mark --mark 0x10000/0x10000 -j ACCEPT
-A cali-INPUT -m comment --comment "cali:bhpnxD5IRtBP8KW0" -j MARK --set-xmark 0x0/0xf0000
-A cali-INPUT -m comment --comment "cali:H5_bccAbHV0sooVy" -j cali-from-host-endpoint
-A cali-INPUT -m comment --comment "cali:inBL01YlfurT0dbI" -m comment --comment "Host endpoint policy accepted packet." -m mark --mark 0x10000/0x10000 -j ACCEPT
-A cali-OUTPUT -m comment --comment "cali:Mq1_rAdXXH3YkrzW" -m mark --mark 0x10000/0x10000 -j ACCEPT
-A cali-OUTPUT -m comment --comment "cali:5Z67OUUpTOM7Xa1a" -m mark ! --mark 0x0/0xfff00000 -g cali-forward-endpoint-mark
-A cali-OUTPUT -o cali+ -m comment --comment "cali:M2Wf0OehNdig8MHR" -j RETURN
-A cali-OUTPUT -p ipv4 -m comment --comment "cali:AJBkLho_0Qd8LNr3" -m comment --comment "Allow IPIP packets to other Calico hosts" -m set --match-set cali40all-hosts-net dst -m addrtype --src-type LOCAL -j ACCEPT
-A cali-OUTPUT -m comment --comment "cali:iz2RWXlXJDUfsLpe" -j MARK --set-xmark 0x0/0xf0000
-A cali-OUTPUT -m comment --comment "cali:xQqLi8S0sxbiyvjR" -m conntrack ! --ctstate DNAT -j cali-to-host-endpoint
-A cali-OUTPUT -m comment --comment "cali:aSnsxZdmhxm_ilRZ" -m comment --comment "Host endpoint policy accepted packet." -m mark --mark 0x10000/0x10000 -j ACCEPT
-A cali-forward-check -m comment --comment "cali:Pbldlb4FaULvpdD8" -m conntrack --ctstate RELATED,ESTABLISHED -j RETURN
-A cali-forward-check -p tcp -m comment --comment "cali:ZD-6UxuUtGW-xtzg" -m comment --comment "To kubernetes NodePort service" -m multiport --dports 30000:32767 -m set --match-set cali40this-host dst -g cali-set-endpoint-mark
-A cali-forward-check -p udp -m comment --comment "cali:CbPfUajQ2bFVnDq4" -m comment --comment "To kubernetes NodePort service" -m multiport --dports 30000:32767 -m set --match-set cali40this-host dst -g cali-set-endpoint-mark
-A cali-forward-check -m comment --comment "cali:jmhU0ODogX-Zfe5g" -m comment --comment "To kubernetes service" -m set ! --match-set cali40this-host dst -j cali-set-endpoint-mark
-A cali-forward-endpoint-mark -m comment --comment "cali:O0SmFDrnm7KggWqW" -m mark ! --mark 0x100000/0xfff00000 -j cali-from-endpoint-mark
-A cali-forward-endpoint-mark -o cali+ -m comment --comment "cali:aFl0WFKRxDqj8oA6" -j cali-to-wl-dispatch
-A cali-forward-endpoint-mark -m comment --comment "cali:AZKVrO3i_8cLai5f" -j cali-to-hep-forward
-A cali-forward-endpoint-mark -m comment --comment "cali:96HaP1sFtb-NYoYA" -j MARK --set-xmark 0x0/0xfff00000
-A cali-forward-endpoint-mark -m comment --comment "cali:VxO6hyNWz62YEtul" -m comment --comment "Policy explicitly accepted packet." -m mark --mark 0x10000/0x10000 -j ACCEPT
-A cali-from-endpoint-mark -m comment --comment "cali:DdNpJmVdCLqJ5dTE" -m mark --mark 0xb8900000/0xfff00000 -g cali-fw-cali264ca4ab91d
-A cali-from-endpoint-mark -m comment --comment "cali:gcPKkNEfM7p8IqTy" -m mark --mark 0x1cc00000/0xfff00000 -g cali-fw-cali8f0eab1f8f3
-A cali-from-endpoint-mark -m comment --comment "cali:Pmn0S29PSWLOqUQ9" -m mark --mark 0xb9300000/0xfff00000 -g cali-fw-calib8398c29e44
-A cali-from-endpoint-mark -m comment --comment "cali:gMxnPM_uI-iGzTip" -m mark --mark 0xb7b00000/0xfff00000 -g cali-fw-calibf639a2fbff
-A cali-from-endpoint-mark -m comment --comment "cali:aGurFejn7GSMGugD" -m mark --mark 0xb2300000/0xfff00000 -g cali-fw-calie82e19a348e
-A cali-from-endpoint-mark -m comment --comment "cali:Lj1C8mTN_IcBKFYn" -m mark --mark 0x63100000/0xfff00000 -g cali-fw-califd92bc1f55b
-A cali-from-endpoint-mark -m comment --comment "cali:smgfqrmHOHivV-97" -m comment --comment "Unknown interface" -j DROP
-A cali-from-wl-dispatch -i cali264ca4ab91d -m comment --comment "cali:kM_Ky9BhyBICrRTS" -g cali-fw-cali264ca4ab91d
-A cali-from-wl-dispatch -i cali8f0eab1f8f3 -m comment --comment "cali:-L850qbkYAoVXmTJ" -g cali-fw-cali8f0eab1f8f3
-A cali-from-wl-dispatch -i calib+ -m comment --comment "cali:PBjA3Nv1mLBptRfq" -g cali-from-wl-dispatch-b
-A cali-from-wl-dispatch -i calie82e19a348e -m comment --comment "cali:d4HDC8e6Q4ur9a8H" -g cali-fw-calie82e19a348e
-A cali-from-wl-dispatch -i califd92bc1f55b -m comment --comment "cali:55NUpjYn9c0Oe5_K" -g cali-fw-califd92bc1f55b
-A cali-from-wl-dispatch -m comment --comment "cali:rFwoMHu0K4xcDm-V" -m comment --comment "Unknown interface" -j DROP
-A cali-from-wl-dispatch-b -i calib8398c29e44 -m comment --comment "cali:iWpyXCMdzKDMwJVe" -g cali-fw-calib8398c29e44
-A cali-from-wl-dispatch-b -i calibf639a2fbff -m comment --comment "cali:-qkblqcf66bta5Gc" -g cali-fw-calibf639a2fbff
-A cali-from-wl-dispatch-b -m comment --comment "cali:X7MQZXOtK762PPcd" -m comment --comment "Unknown interface" -j DROP
-A cali-fw-cali264ca4ab91d -m comment --comment "cali:MaOH1a-9A2o4vBOn" -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A cali-fw-cali264ca4ab91d -m comment --comment "cali:I03WLcAAcBxEHt7y" -m conntrack --ctstate INVALID -j DROP
-A cali-fw-cali264ca4ab91d -m comment --comment "cali:Y9Z5DwQwBur4XTVD" -j MARK --set-xmark 0x0/0x10000
-A cali-fw-cali264ca4ab91d -p udp -m comment --comment "cali:2bA9WfoiZ41uptl1" -m comment --comment "Drop VXLAN encapped packets originating in workloads" -m multiport --dports 4789 -j DROP
-A cali-fw-cali264ca4ab91d -p ipv4 -m comment --comment "cali:f8p4d18DhlCsk-01" -m comment --comment "Drop IPinIP encapped packets originating in workloads" -j DROP
-A cali-fw-cali264ca4ab91d -m comment --comment "cali:_7lzM7mJYGYnQQHl" -j cali-pro-kns.kube-system
-A cali-fw-cali264ca4ab91d -m comment --comment "cali:s4vuIpr9ZE49eStE" -m comment --comment "Return if profile accepted" -m mark --mark 0x10000/0x10000 -j RETURN
-A cali-fw-cali264ca4ab91d -m comment --comment "cali:Ov1xAGPt2akKtpHG" -j cali-pro-_u2Tn2rSoAPffvE7JO6
-A cali-fw-cali264ca4ab91d -m comment --comment "cali:QzQQLdsz_nSRxA1f" -m comment --comment "Return if profile accepted" -m mark --mark 0x10000/0x10000 -j RETURN
-A cali-fw-cali264ca4ab91d -m comment --comment "cali:mReaEYjJsBwft5mJ" -m comment --comment "Drop if no profiles matched" -j DROP
-A cali-fw-cali8f0eab1f8f3 -m comment --comment "cali:yNm6s7-EKvfvwbu8" -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A cali-fw-cali8f0eab1f8f3 -m comment --comment "cali:vypfBh-NkFTVtoxi" -m conntrack --ctstate INVALID -j DROP
-A cali-fw-cali8f0eab1f8f3 -m comment --comment "cali:5v-lGFy0MuyLGuP3" -j MARK --set-xmark 0x0/0x10000
-A cali-fw-cali8f0eab1f8f3 -p udp -m comment --comment "cali:IfdQFHehgvBf7u-R" -m comment --comment "Drop VXLAN encapped packets originating in workloads" -m multiport --dports 4789 -j DROP
-A cali-fw-cali8f0eab1f8f3 -p ipv4 -m comment --comment "cali:yMHUHB3OmOUHaIm3" -m comment --comment "Drop IPinIP encapped packets originating in workloads" -j DROP
-A cali-fw-cali8f0eab1f8f3 -m comment --comment "cali:Riwgz_M3u-o1C3t4" -j cali-pro-kns.calico-system
-A cali-fw-cali8f0eab1f8f3 -m comment --comment "cali:xDceMgOmQ0QO93x7" -m comment --comment "Return if profile accepted" -m mark --mark 0x10000/0x10000 -j RETURN
-A cali-fw-cali8f0eab1f8f3 -m comment --comment "cali:HswLeCrOaaE8hUed" -j cali-pro-_og73BH3DuNOZrbBKFW
-A cali-fw-cali8f0eab1f8f3 -m comment --comment "cali:PdeoDj_rjZwV2fpz" -m comment --comment "Return if profile accepted" -m mark --mark 0x10000/0x10000 -j RETURN
-A cali-fw-cali8f0eab1f8f3 -m comment --comment "cali:GA5e36zB9OI934Tm" -m comment --comment "Drop if no profiles matched" -j DROP
-A cali-fw-calib8398c29e44 -m comment --comment "cali:MQD2ITSW1Hjmsbxi" -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A cali-fw-calib8398c29e44 -m comment --comment "cali:9whIeb7y2HuHyN_4" -m conntrack --ctstate INVALID -j DROP
-A cali-fw-calib8398c29e44 -m comment --comment "cali:qA8u67PqDOWCwYaP" -j MARK --set-xmark 0x0/0x10000
-A cali-fw-calib8398c29e44 -p udp -m comment --comment "cali:JRvUin1eyW_eo_nH" -m comment --comment "Drop VXLAN encapped packets originating in workloads" -m multiport --dports 4789 -j DROP
-A cali-fw-calib8398c29e44 -p ipv4 -m comment --comment "cali:EwuyGWgC7c6QPwbq" -m comment --comment "Drop IPinIP encapped packets originating in workloads" -j DROP
-A cali-fw-calib8398c29e44 -m comment --comment "cali:_A9xmAZmubP054RF" -j cali-pro-kns.calico-system
-A cali-fw-calib8398c29e44 -m comment --comment "cali:tkpgs11tzkZaL7Sc" -m comment --comment "Return if profile accepted" -m mark --mark 0x10000/0x10000 -j RETURN
-A cali-fw-calib8398c29e44 -m comment --comment "cali:fZRVIAMIB_19brJG" -j cali-pro-_nzzjLvInId1gPHmQz_
-A cali-fw-calib8398c29e44 -m comment --comment "cali:i6C5LoKPY2YVIETJ" -m comment --comment "Return if profile accepted" -m mark --mark 0x10000/0x10000 -j RETURN
-A cali-fw-calib8398c29e44 -m comment --comment "cali:Mf1rc5mDKwouxXEZ" -m comment --comment "Drop if no profiles matched" -j DROP
-A cali-fw-calibf639a2fbff -m comment --comment "cali:eOqxAeh-2v_KNu8-" -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A cali-fw-calibf639a2fbff -m comment --comment "cali:P_-WdaB4ovpedhPC" -m conntrack --ctstate INVALID -j DROP
-A cali-fw-calibf639a2fbff -m comment --comment "cali:-DvO-3Cmui7J2cYx" -j MARK --set-xmark 0x0/0x10000
-A cali-fw-calibf639a2fbff -p udp -m comment --comment "cali:OaSNzD8ZHUmg9Ijw" -m comment --comment "Drop VXLAN encapped packets originating in workloads" -m multiport --dports 4789 -j DROP
-A cali-fw-calibf639a2fbff -p ipv4 -m comment --comment "cali:2Xc3n0lSRgma4tX2" -m comment --comment "Drop IPinIP encapped packets originating in workloads" -j DROP
-A cali-fw-calibf639a2fbff -m comment --comment "cali:gEcb0bilBoOE3xpx" -j cali-pro-kns.kube-system
-A cali-fw-calibf639a2fbff -m comment --comment "cali:Fb1lzs6BkJosqcWR" -m comment --comment "Return if profile accepted" -m mark --mark 0x10000/0x10000 -j RETURN
-A cali-fw-calibf639a2fbff -m comment --comment "cali:NC0k78JOSkTMnTUz" -j cali-pro-_u2Tn2rSoAPffvE7JO6
-A cali-fw-calibf639a2fbff -m comment --comment "cali:A7zj4Xp_okCj8Rn-" -m comment --comment "Return if profile accepted" -m mark --mark 0x10000/0x10000 -j RETURN
-A cali-fw-calibf639a2fbff -m comment --comment "cali:uab2DkxVBNMbSQZ4" -m comment --comment "Drop if no profiles matched" -j DROP
-A cali-fw-calie82e19a348e -m comment --comment "cali:DA-jRiRXV4B5DO6U" -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A cali-fw-calie82e19a348e -m comment --comment "cali:4gwiWhIzkd1tGSsK" -m conntrack --ctstate INVALID -j DROP
-A cali-fw-calie82e19a348e -m comment --comment "cali:tSD_sKqOxsoy-7z2" -j MARK --set-xmark 0x0/0x10000
-A cali-fw-calie82e19a348e -p udp -m comment --comment "cali:sJrq9l06Riy1_xfJ" -m comment --comment "Drop VXLAN encapped packets originating in workloads" -m multiport --dports 4789 -j DROP
-A cali-fw-calie82e19a348e -p ipv4 -m comment --comment "cali:AFX-czEKT5MVT_Ar" -m comment --comment "Drop IPinIP encapped packets originating in workloads" -j DROP
-A cali-fw-calie82e19a348e -m comment --comment "cali:6grwEd6iyXjHyA09" -j cali-pro-_kJqfZpgUe7r2t4A-14
-A cali-fw-calie82e19a348e -m comment --comment "cali:L4HmzWsMNBOAyznQ" -m comment --comment "Return if profile accepted" -m mark --mark 0x10000/0x10000 -j RETURN
-A cali-fw-calie82e19a348e -m comment --comment "cali:l74JDw1ZQqsuCXSQ" -j cali-pro-_4yi5_iSUAwsU8zMHTk
-A cali-fw-calie82e19a348e -m comment --comment "cali:1lSjTMv_Ubw6ip6K" -m comment --comment "Return if profile accepted" -m mark --mark 0x10000/0x10000 -j RETURN
-A cali-fw-calie82e19a348e -m comment --comment "cali:MJF4uD8Q-3-jc47a" -m comment --comment "Drop if no profiles matched" -j DROP
-A cali-fw-califd92bc1f55b -m comment --comment "cali:Zfyr_qX-m_sj-ziG" -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A cali-fw-califd92bc1f55b -m comment --comment "cali:_0Biql-nY6a513NX" -m conntrack --ctstate INVALID -j DROP
-A cali-fw-califd92bc1f55b -m comment --comment "cali:A7cqsO2iMwrN65Vl" -j MARK --set-xmark 0x0/0x10000
-A cali-fw-califd92bc1f55b -p udp -m comment --comment "cali:vb3D5WnjApd3hl96" -m comment --comment "Drop VXLAN encapped packets originating in workloads" -m multiport --dports 4789 -j DROP
-A cali-fw-califd92bc1f55b -p ipv4 -m comment --comment "cali:XIgivXsfCuJp-cZO" -m comment --comment "Drop IPinIP encapped packets originating in workloads" -j DROP
-A cali-fw-califd92bc1f55b -m comment --comment "cali:l5SsA-SgHXLlXxYC" -j cali-pro-_kJqfZpgUe7r2t4A-14
-A cali-fw-califd92bc1f55b -m comment --comment "cali:EgcA0L-GBvrpdznv" -m comment --comment "Return if profile accepted" -m mark --mark 0x10000/0x10000 -j RETURN
-A cali-fw-califd92bc1f55b -m comment --comment "cali:jqzfSnpZEsTiy7yd" -j cali-pro-_4yi5_iSUAwsU8zMHTk
-A cali-fw-califd92bc1f55b -m comment --comment "cali:C8jMc5YHVcI9bcsx" -m comment --comment "Return if profile accepted" -m mark --mark 0x10000/0x10000 -j RETURN
-A cali-fw-califd92bc1f55b -m comment --comment "cali:B2ZQfg1yF-ICX0yf" -m comment --comment "Drop if no profiles matched" -j DROP
-A cali-pi-_3CJ_GmvE9pcCktVJ2ep -p tcp -m comment --comment "cali:I0yo8ky1YADcMXRf" -m comment --comment "Policy calico-apiserver/knp.default.allow-apiserver ingress" -m multiport --dports 5443 -j MARK --set-xmark 0x10000/0x10000
-A cali-pi-_3CJ_GmvE9pcCktVJ2ep -m comment --comment "cali:vcoXnuptt0fs1M8q" -m mark --mark 0x10000/0x10000 -j RETURN
-A cali-pri-_4yi5_iSUAwsU8zMHTk -m comment --comment "cali:ZYnaZZFwsSjfXO4C" -m comment --comment "Profile ksa.calico-apiserver.calico-apiserver ingress"
-A cali-pri-_kJqfZpgUe7r2t4A-14 -m comment --comment "cali:IQx0SzlDGn6BPv0A" -m comment --comment "Profile kns.calico-apiserver ingress" -j MARK --set-xmark 0x10000/0x10000
-A cali-pri-_kJqfZpgUe7r2t4A-14 -m comment --comment "cali:hnAzdaRiFbG1YPHK" -m mark --mark 0x10000/0x10000 -j RETURN
-A cali-pri-_nzzjLvInId1gPHmQz_ -m comment --comment "cali:UQoEf2WCdU0bPTCb" -m comment --comment "Profile ksa.calico-system.calico-kube-controllers ingress"
-A cali-pri-_og73BH3DuNOZrbBKFW -m comment --comment "cali:OzmBDJrkeSSUiXhX" -m comment --comment "Profile ksa.calico-system.default ingress"
-A cali-pri-_u2Tn2rSoAPffvE7JO6 -m comment --comment "cali:WqgznqAQ-uYV0oBx" -m comment --comment "Profile ksa.kube-system.coredns ingress"
-A cali-pri-kns.calico-system -m comment --comment "cali:hLANj-OVIyT53h_j" -m comment --comment "Profile kns.calico-system ingress" -j MARK --set-xmark 0x10000/0x10000
-A cali-pri-kns.calico-system -m comment --comment "cali:AHts2xleddEc04Gr" -m mark --mark 0x10000/0x10000 -j RETURN
-A cali-pri-kns.kube-system -m comment --comment "cali:J1TyxtHWd0qaBGK-" -m comment --comment "Profile kns.kube-system ingress" -j MARK --set-xmark 0x10000/0x10000
-A cali-pri-kns.kube-system -m comment --comment "cali:QIB6k7eEKdIg73Jp" -m mark --mark 0x10000/0x10000 -j RETURN
-A cali-pro-_4yi5_iSUAwsU8zMHTk -m comment --comment "cali:Pp_dQp2FeNabRhyi" -m comment --comment "Profile ksa.calico-apiserver.calico-apiserver egress"
-A cali-pro-_kJqfZpgUe7r2t4A-14 -m comment --comment "cali:_cFTxC141wwWRzyZ" -m comment --comment "Profile kns.calico-apiserver egress" -j MARK --set-xmark 0x10000/0x10000
-A cali-pro-_kJqfZpgUe7r2t4A-14 -m comment --comment "cali:dvDa77rVzpVqK7ZF" -m mark --mark 0x10000/0x10000 -j RETURN
-A cali-pro-_nzzjLvInId1gPHmQz_ -m comment --comment "cali:5bHxBXLMkJKgC6dk" -m comment --comment "Profile ksa.calico-system.calico-kube-controllers egress"
-A cali-pro-_og73BH3DuNOZrbBKFW -m comment --comment "cali:09a9ZBFOA1dZ4RN5" -m comment --comment "Profile ksa.calico-system.default egress"
-A cali-pro-_u2Tn2rSoAPffvE7JO6 -m comment --comment "cali:0-_UPh39dt5XfhmJ" -m comment --comment "Profile ksa.kube-system.coredns egress"
-A cali-pro-kns.calico-system -m comment --comment "cali:gWxJzCZXxl31NR0P" -m comment --comment "Profile kns.calico-system egress" -j MARK --set-xmark 0x10000/0x10000
-A cali-pro-kns.calico-system -m comment --comment "cali:rHIqpX_kWRu4q0wP" -m mark --mark 0x10000/0x10000 -j RETURN
-A cali-pro-kns.kube-system -m comment --comment "cali:tgOR2S8DVHZW3F1M" -m comment --comment "Profile kns.kube-system egress" -j MARK --set-xmark 0x10000/0x10000
-A cali-pro-kns.kube-system -m comment --comment "cali:HVEEtYPJsiGRXCIt" -m mark --mark 0x10000/0x10000 -j RETURN
-A cali-set-endpoint-mark -i cali264ca4ab91d -m comment --comment "cali:EcrgYWNwzJ8RY0_v" -g cali-sm-cali264ca4ab91d
-A cali-set-endpoint-mark -i cali8f0eab1f8f3 -m comment --comment "cali:eq9EmWeIcRzb3fyC" -g cali-sm-cali8f0eab1f8f3
-A cali-set-endpoint-mark -i calib+ -m comment --comment "cali:ZALzCo26U857gfNN" -g cali-set-endpoint-mark-b
-A cali-set-endpoint-mark -i calie82e19a348e -m comment --comment "cali:RA7DaQFI7sQeiX88" -g cali-sm-calie82e19a348e
-A cali-set-endpoint-mark -i califd92bc1f55b -m comment --comment "cali:hUgcFJ-laA50o_h0" -g cali-sm-califd92bc1f55b
-A cali-set-endpoint-mark -i cali+ -m comment --comment "cali:jnZBKUUj4XdRYGPS" -m comment --comment "Unknown endpoint" -j DROP
-A cali-set-endpoint-mark -m comment --comment "cali:7KvBcFpN2Qdr1YUO" -m comment --comment "Non-Cali endpoint mark" -j MARK --set-xmark 0x100000/0xfff00000
-A cali-set-endpoint-mark-b -i calib8398c29e44 -m comment --comment "cali:9KqHsMcI34eijFZI" -g cali-sm-calib8398c29e44
-A cali-set-endpoint-mark-b -i calibf639a2fbff -m comment --comment "cali:KKUjB2h6f9Yc9nAj" -g cali-sm-calibf639a2fbff
-A cali-sm-cali264ca4ab91d -m comment --comment "cali:uEu8rG3ZXkwmNdsZ" -j MARK --set-xmark 0xb8900000/0xfff00000
-A cali-sm-cali8f0eab1f8f3 -m comment --comment "cali:Rzh7Ohurtx99oXo_" -j MARK --set-xmark 0x1cc00000/0xfff00000
-A cali-sm-calib8398c29e44 -m comment --comment "cali:xDcY1YSBzdaiRnHs" -j MARK --set-xmark 0xb9300000/0xfff00000
-A cali-sm-calibf639a2fbff -m comment --comment "cali:l4WeGZY4Msqwhkbo" -j MARK --set-xmark 0xb7b00000/0xfff00000
-A cali-sm-calie82e19a348e -m comment --comment "cali:XEvuS4jIvkoncrky" -j MARK --set-xmark 0xb2300000/0xfff00000
-A cali-sm-califd92bc1f55b -m comment --comment "cali:fq8erW3_EO_iOQ0S" -j MARK --set-xmark 0x63100000/0xfff00000
-A cali-to-wl-dispatch -o cali264ca4ab91d -m comment --comment "cali:XEmrCHp9tResWt5g" -g cali-tw-cali264ca4ab91d
-A cali-to-wl-dispatch -o cali8f0eab1f8f3 -m comment --comment "cali:8sj85QlTcKGZy7tz" -g cali-tw-cali8f0eab1f8f3
-A cali-to-wl-dispatch -o calib+ -m comment --comment "cali:dfJsgrZeZoP4C8c1" -g cali-to-wl-dispatch-b
-A cali-to-wl-dispatch -o calie82e19a348e -m comment --comment "cali:j7TP49l6UpNwYeWT" -g cali-tw-calie82e19a348e
-A cali-to-wl-dispatch -o califd92bc1f55b -m comment --comment "cali:iu574URdsVWBn9i2" -g cali-tw-califd92bc1f55b
-A cali-to-wl-dispatch -m comment --comment "cali:wVWpQXdhT4gIbeAB" -m comment --comment "Unknown interface" -j DROP
-A cali-to-wl-dispatch-b -o calib8398c29e44 -m comment --comment "cali:hY7DJ6lGNigEv0nm" -g cali-tw-calib8398c29e44
-A cali-to-wl-dispatch-b -o calibf639a2fbff -m comment --comment "cali:xQnW8DLz2X_ZTj3k" -g cali-tw-calibf639a2fbff
-A cali-to-wl-dispatch-b -m comment --comment "cali:BTnBsdtZsfkvtc8o" -m comment --comment "Unknown interface" -j DROP
-A cali-tw-cali264ca4ab91d -m comment --comment "cali:R2Yl5UgXxKVdJZ1G" -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A cali-tw-cali264ca4ab91d -m comment --comment "cali:YXDy4lNYOalO3a2h" -m conntrack --ctstate INVALID -j DROP
-A cali-tw-cali264ca4ab91d -m comment --comment "cali:RueNkN42vlkYtTrY" -j MARK --set-xmark 0x0/0x10000
-A cali-tw-cali264ca4ab91d -m comment --comment "cali:rGcIpzS09DIyfVWI" -j cali-pri-kns.kube-system
-A cali-tw-cali264ca4ab91d -m comment --comment "cali:XodPC_2exCz-nPe5" -m comment --comment "Return if profile accepted" -m mark --mark 0x10000/0x10000 -j RETURN
-A cali-tw-cali264ca4ab91d -m comment --comment "cali:oxzH8mm0NuAhQR7b" -j cali-pri-_u2Tn2rSoAPffvE7JO6
-A cali-tw-cali264ca4ab91d -m comment --comment "cali:3NrxxO9KdP1ZnUwU" -m comment --comment "Return if profile accepted" -m mark --mark 0x10000/0x10000 -j RETURN
-A cali-tw-cali264ca4ab91d -m comment --comment "cali:ssjRE2Pl_TjR2_Aq" -m comment --comment "Drop if no profiles matched" -j DROP
-A cali-tw-cali8f0eab1f8f3 -m comment --comment "cali:4k4Z7cbdxbd3PkVw" -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A cali-tw-cali8f0eab1f8f3 -m comment --comment "cali:pnHKLkGo2U8WYYPX" -m conntrack --ctstate INVALID -j DROP
-A cali-tw-cali8f0eab1f8f3 -m comment --comment "cali:SS0X6w1sDY6axV4h" -j MARK --set-xmark 0x0/0x10000
-A cali-tw-cali8f0eab1f8f3 -m comment --comment "cali:57cbRfkenLbqKReu" -j cali-pri-kns.calico-system
-A cali-tw-cali8f0eab1f8f3 -m comment --comment "cali:VWxLEaMzvAfa6NPP" -m comment --comment "Return if profile accepted" -m mark --mark 0x10000/0x10000 -j RETURN
-A cali-tw-cali8f0eab1f8f3 -m comment --comment "cali:75dxZMToCxXCotL0" -j cali-pri-_og73BH3DuNOZrbBKFW
-A cali-tw-cali8f0eab1f8f3 -m comment --comment "cali:n16egjLY5pl2NPOf" -m comment --comment "Return if profile accepted" -m mark --mark 0x10000/0x10000 -j RETURN
-A cali-tw-cali8f0eab1f8f3 -m comment --comment "cali:aoCoEjLVR1JoHx78" -m comment --comment "Drop if no profiles matched" -j DROP
-A cali-tw-calib8398c29e44 -m comment --comment "cali:4TVNgj2-Kwfxx_XT" -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A cali-tw-calib8398c29e44 -m comment --comment "cali:oXCovYeB0X-YeNRy" -m conntrack --ctstate INVALID -j DROP
-A cali-tw-calib8398c29e44 -m comment --comment "cali:HEAHmUSNpv1y7W3h" -j MARK --set-xmark 0x0/0x10000
-A cali-tw-calib8398c29e44 -m comment --comment "cali:OIrvLdSQGpcmXtGi" -j cali-pri-kns.calico-system
-A cali-tw-calib8398c29e44 -m comment --comment "cali:XrCPcf--qXL4fske" -m comment --comment "Return if profile accepted" -m mark --mark 0x10000/0x10000 -j RETURN
-A cali-tw-calib8398c29e44 -m comment --comment "cali:9TPccy4fkJ5b0Tt4" -j cali-pri-_nzzjLvInId1gPHmQz_
-A cali-tw-calib8398c29e44 -m comment --comment "cali:wyExjialaAQcOv48" -m comment --comment "Return if profile accepted" -m mark --mark 0x10000/0x10000 -j RETURN
-A cali-tw-calib8398c29e44 -m comment --comment "cali:81XCc4h_9BJCoM8j" -m comment --comment "Drop if no profiles matched" -j DROP
-A cali-tw-calibf639a2fbff -m comment --comment "cali:9JT9kLXapoF-guuJ" -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A cali-tw-calibf639a2fbff -m comment --comment "cali:DmmgyeVcNiw5kBkL" -m conntrack --ctstate INVALID -j DROP
-A cali-tw-calibf639a2fbff -m comment --comment "cali:OBUUAd9mk5w7v5o5" -j MARK --set-xmark 0x0/0x10000
-A cali-tw-calibf639a2fbff -m comment --comment "cali:Fxlyv3q9MO5uQdPk" -j cali-pri-kns.kube-system
-A cali-tw-calibf639a2fbff -m comment --comment "cali:ijuNYyLQ62b5jv6d" -m comment --comment "Return if profile accepted" -m mark --mark 0x10000/0x10000 -j RETURN
-A cali-tw-calibf639a2fbff -m comment --comment "cali:rGbqbkqh36ecMWMt" -j cali-pri-_u2Tn2rSoAPffvE7JO6
-A cali-tw-calibf639a2fbff -m comment --comment "cali:Bu6VmvmjmyeDuRPI" -m comment --comment "Return if profile accepted" -m mark --mark 0x10000/0x10000 -j RETURN
-A cali-tw-calibf639a2fbff -m comment --comment "cali:JWm90Bc8OlMB3J0K" -m comment --comment "Drop if no profiles matched" -j DROP
-A cali-tw-calie82e19a348e -m comment --comment "cali:lcxnDaMfsYuCBSLV" -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A cali-tw-calie82e19a348e -m comment --comment "cali:bStXvZOie3ziE4H6" -m conntrack --ctstate INVALID -j DROP
-A cali-tw-calie82e19a348e -m comment --comment "cali:F6r3jIb3n0oB3d-5" -j MARK --set-xmark 0x0/0x10000
-A cali-tw-calie82e19a348e -m comment --comment "cali:sBaHoIAYwQ9Uw5Yu" -m comment --comment "Start of policies" -j MARK --set-xmark 0x0/0x20000
-A cali-tw-calie82e19a348e -m comment --comment "cali:3DaD-hx-IAlgR-om" -m mark --mark 0x0/0x20000 -j cali-pi-_3CJ_GmvE9pcCktVJ2ep
-A cali-tw-calie82e19a348e -m comment --comment "cali:YvxhTEM1iEKoGFiz" -m comment --comment "Return if policy accepted" -m mark --mark 0x10000/0x10000 -j RETURN
-A cali-tw-calie82e19a348e -m comment --comment "cali:NjXOalH7AJQT83R6" -m comment --comment "Drop if no policies passed packet" -m mark --mark 0x0/0x20000 -j DROP
-A cali-tw-calie82e19a348e -m comment --comment "cali:BpJh7Jr4C6NPRUve" -j cali-pri-_kJqfZpgUe7r2t4A-14
-A cali-tw-calie82e19a348e -m comment --comment "cali:sElc1O7suF7ZGzMv" -m comment --comment "Return if profile accepted" -m mark --mark 0x10000/0x10000 -j RETURN
-A cali-tw-calie82e19a348e -m comment --comment "cali:KZqeVWzU4gOBbEXI" -j cali-pri-_4yi5_iSUAwsU8zMHTk
-A cali-tw-calie82e19a348e -m comment --comment "cali:8KWlZuz9e0VlGJ5V" -m comment --comment "Return if profile accepted" -m mark --mark 0x10000/0x10000 -j RETURN
-A cali-tw-calie82e19a348e -m comment --comment "cali:-PK9lb3wV9gVieBI" -m comment --comment "Drop if no profiles matched" -j DROP
-A cali-tw-califd92bc1f55b -m comment --comment "cali:I7tKeF-LTJZ04Ubk" -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A cali-tw-califd92bc1f55b -m comment --comment "cali:UCqnsZkootYvZEWN" -m conntrack --ctstate INVALID -j DROP
-A cali-tw-califd92bc1f55b -m comment --comment "cali:8cC5dN7VUWC7cFG8" -j MARK --set-xmark 0x0/0x10000
-A cali-tw-califd92bc1f55b -m comment --comment "cali:NQpjlnv8-G7fMKsa" -m comment --comment "Start of policies" -j MARK --set-xmark 0x0/0x20000
-A cali-tw-califd92bc1f55b -m comment --comment "cali:UlnH80p51MI_lAAX" -m mark --mark 0x0/0x20000 -j cali-pi-_3CJ_GmvE9pcCktVJ2ep
-A cali-tw-califd92bc1f55b -m comment --comment "cali:2PXPQh5ygSs-XHAt" -m comment --comment "Return if policy accepted" -m mark --mark 0x10000/0x10000 -j RETURN
-A cali-tw-califd92bc1f55b -m comment --comment "cali:XBZ-goj9gpoeKixI" -m comment --comment "Drop if no policies passed packet" -m mark --mark 0x0/0x20000 -j DROP
-A cali-tw-califd92bc1f55b -m comment --comment "cali:wVLgKZO0DChXo-mH" -j cali-pri-_kJqfZpgUe7r2t4A-14
-A cali-tw-califd92bc1f55b -m comment --comment "cali:O6WezeqnrdhDuT8y" -m comment --comment "Return if profile accepted" -m mark --mark 0x10000/0x10000 -j RETURN
-A cali-tw-califd92bc1f55b -m comment --comment "cali:Zp9SfSVZAqnKAv6U" -j cali-pri-_4yi5_iSUAwsU8zMHTk
-A cali-tw-califd92bc1f55b -m comment --comment "cali:nfet-k4mihx0mYO0" -m comment --comment "Return if profile accepted" -m mark --mark 0x10000/0x10000 -j RETURN
-A cali-tw-califd92bc1f55b -m comment --comment "cali:jMRvxEG7Ykn2uvoq" -m comment --comment "Drop if no profiles matched" -j DROP
-A cali-wl-to-host -m comment --comment "cali:Ee9Sbo10IpVujdIY" -j cali-from-wl-dispatch
-A cali-wl-to-host -m comment --comment "cali:nSZbcOoG1xPONxb8" -m comment --comment "Configured DefaultEndpointToHostAction" -j ACCEPT
COMMIT
# Completed on Mon Aug 26 10:08:53 2024
# Generated by iptables-save v1.4.21 on Mon Aug 26 10:08:53 2024
*nat
:PREROUTING ACCEPT [799:74684]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [10:600]
:POSTROUTING ACCEPT [797:74744]
:DOCKER - [0:0]
:KUBE-KUBELET-CANARY - [0:0]
:KUBE-LOAD-BALANCER - [0:0]
:KUBE-MARK-MASQ - [0:0]
:KUBE-NODE-PORT - [0:0]
:KUBE-NODEPORTS - [0:0]
:KUBE-POSTROUTING - [0:0]
:KUBE-PROXY-CANARY - [0:0]
:KUBE-SEP-7J3PXXC746AAT6A4 - [0:0]
:KUBE-SEP-APPOXWYHNPQM3A5Z - [0:0]
:KUBE-SEP-DAHJWJT6IRVCCB67 - [0:0]
:KUBE-SEP-FYCEL5PE65U3XGWB - [0:0]
:KUBE-SEP-HSXNI65L5G6ROKM2 - [0:0]
:KUBE-SEP-LQDHZ5LYMUYXL3XD - [0:0]
:KUBE-SEP-O3U67ZARRXTZ6Q2H - [0:0]
:KUBE-SEP-S5GWZTRHIEZICHHY - [0:0]
:KUBE-SEP-U4EFYTTV7G7PJHK4 - [0:0]
:KUBE-SEP-WSVKKSCEUEP4LICT - [0:0]
:KUBE-SEP-YKESGSEGHCCTV6QQ - [0:0]
:KUBE-SERVICES - [0:0]
:KUBE-SVC-ERIFXISQEP7F7OF4 - [0:0]
:KUBE-SVC-I24EZXP75AX5E7TU - [0:0]
:KUBE-SVC-JD5MR3NA4I4DYORP - [0:0]
:KUBE-SVC-NPX46M4PTMTKRN6Y - [0:0]
:KUBE-SVC-RK657RLKDNVNU64O - [0:0]
:KUBE-SVC-TCOU7JCQXEZGVUNU - [0:0]
:cali-OUTPUT - [0:0]
:cali-POSTROUTING - [0:0]
:cali-PREROUTING - [0:0]
:cali-fip-dnat - [0:0]
:cali-fip-snat - [0:0]
:cali-nat-outgoing - [0:0]
-A PREROUTING -m comment --comment "cali:6gwbT8clXdHdC1b1" -j cali-PREROUTING
-A PREROUTING -m comment --comment "kubernetes service portals" -j KUBE-SERVICES
-A PREROUTING -m addrtype --dst-type LOCAL -j DOCKER
-A OUTPUT -m comment --comment "cali:tVnHkvAo15HuiPy0" -j cali-OUTPUT
-A OUTPUT -m comment --comment "kubernetes service portals" -j KUBE-SERVICES
-A OUTPUT ! -d 127.0.0.0/8 -m addrtype --dst-type LOCAL -j DOCKER
-A POSTROUTING -m comment --comment "cali:O3lYWMrLQYEMJtB5" -j cali-POSTROUTING
-A POSTROUTING -s 172.17.0.0/16 ! -o docker0 -j MASQUERADE
-A POSTROUTING -m comment --comment "kubernetes postrouting rules" -j KUBE-POSTROUTING
-A DOCKER -i docker0 -j RETURN
-A KUBE-LOAD-BALANCER -j KUBE-MARK-MASQ
-A KUBE-MARK-MASQ -j MARK --set-xmark 0x4000/0x4000
-A KUBE-POSTROUTING -m comment --comment "Kubernetes endpoints dst ip:port, source ip for solving hairpin purpose" -m set --match-set KUBE-LOOP-BACK dst,dst,src -j MASQUERADE
-A KUBE-POSTROUTING -m mark ! --mark 0x4000/0x4000 -j RETURN
-A KUBE-POSTROUTING -j MARK --set-xmark 0x4000/0x0
-A KUBE-POSTROUTING -m comment --comment "kubernetes service traffic requiring SNAT" -j MASQUERADE
-A KUBE-SEP-7J3PXXC746AAT6A4 -s 10.100.32.131/32 -m comment --comment "kube-system/kube-dns:dns" -j KUBE-MARK-MASQ
-A KUBE-SEP-7J3PXXC746AAT6A4 -p udp -m comment --comment "kube-system/kube-dns:dns" -m udp -j DNAT --to-destination 10.100.32.131:53
-A KUBE-SEP-APPOXWYHNPQM3A5Z -s 10.100.32.131/32 -m comment --comment "kube-system/kube-dns:dns-tcp" -j KUBE-MARK-MASQ
-A KUBE-SEP-APPOXWYHNPQM3A5Z -p tcp -m comment --comment "kube-system/kube-dns:dns-tcp" -m tcp -j DNAT --to-destination 10.100.32.131:53
-A KUBE-SEP-DAHJWJT6IRVCCB67 -s 10.0.17.5/32 -m comment --comment "default/kubernetes:https" -j KUBE-MARK-MASQ
-A KUBE-SEP-DAHJWJT6IRVCCB67 -p tcp -m comment --comment "default/kubernetes:https" -m tcp -j DNAT --to-destination 10.0.17.5:6443
-A KUBE-SEP-FYCEL5PE65U3XGWB -s 10.100.32.134/32 -m comment --comment "kube-system/kube-dns:metrics" -j KUBE-MARK-MASQ
-A KUBE-SEP-FYCEL5PE65U3XGWB -p tcp -m comment --comment "kube-system/kube-dns:metrics" -m tcp -j DNAT --to-destination 10.100.32.134:9153
-A KUBE-SEP-HSXNI65L5G6ROKM2 -s 10.100.32.131/32 -m comment --comment "kube-system/kube-dns:metrics" -j KUBE-MARK-MASQ
-A KUBE-SEP-HSXNI65L5G6ROKM2 -p tcp -m comment --comment "kube-system/kube-dns:metrics" -m tcp -j DNAT --to-destination 10.100.32.131:9153
-A KUBE-SEP-LQDHZ5LYMUYXL3XD -s 10.100.32.133/32 -m comment --comment "calico-apiserver/calico-api:apiserver" -j KUBE-MARK-MASQ
-A KUBE-SEP-LQDHZ5LYMUYXL3XD -p tcp -m comment --comment "calico-apiserver/calico-api:apiserver" -m tcp -j DNAT --to-destination 10.100.32.133:5443
-A KUBE-SEP-O3U67ZARRXTZ6Q2H -s 10.0.17.7/32 -m comment --comment "calico-system/calico-typha:calico-typha" -j KUBE-MARK-MASQ
-A KUBE-SEP-O3U67ZARRXTZ6Q2H -p tcp -m comment --comment "calico-system/calico-typha:calico-typha" -m tcp -j DNAT --to-destination 10.0.17.7:5473
-A KUBE-SEP-S5GWZTRHIEZICHHY -s 10.100.32.134/32 -m comment --comment "kube-system/kube-dns:dns-tcp" -j KUBE-MARK-MASQ
-A KUBE-SEP-S5GWZTRHIEZICHHY -p tcp -m comment --comment "kube-system/kube-dns:dns-tcp" -m tcp -j DNAT --to-destination 10.100.32.134:53
-A KUBE-SEP-U4EFYTTV7G7PJHK4 -s 10.0.17.5/32 -m comment --comment "calico-system/calico-typha:calico-typha" -j KUBE-MARK-MASQ
-A KUBE-SEP-U4EFYTTV7G7PJHK4 -p tcp -m comment --comment "calico-system/calico-typha:calico-typha" -m tcp -j DNAT --to-destination 10.0.17.5:5473
-A KUBE-SEP-WSVKKSCEUEP4LICT -s 10.100.32.134/32 -m comment --comment "kube-system/kube-dns:dns" -j KUBE-MARK-MASQ
-A KUBE-SEP-WSVKKSCEUEP4LICT -p udp -m comment --comment "kube-system/kube-dns:dns" -m udp -j DNAT --to-destination 10.100.32.134:53
-A KUBE-SEP-YKESGSEGHCCTV6QQ -s 10.100.32.132/32 -m comment --comment "calico-apiserver/calico-api:apiserver" -j KUBE-MARK-MASQ
-A KUBE-SEP-YKESGSEGHCCTV6QQ -p tcp -m comment --comment "calico-apiserver/calico-api:apiserver" -m tcp -j DNAT --to-destination 10.100.32.132:5443
-A KUBE-SERVICES -s 127.0.0.0/8 -j RETURN
-A KUBE-SERVICES ! -s 10.100.0.0/16 -m comment --comment "Kubernetes service cluster ip + port for masquerade purpose" -m set --match-set KUBE-CLUSTER-IP dst,dst -j KUBE-MARK-MASQ
-A KUBE-SERVICES -m addrtype --dst-type LOCAL -j KUBE-NODE-PORT
-A KUBE-SERVICES -m set --match-set KUBE-CLUSTER-IP dst,dst -j ACCEPT
-A KUBE-SVC-ERIFXISQEP7F7OF4 ! -s 10.100.0.0/16 -d 10.96.0.10/32 -p tcp -m comment --comment "kube-system/kube-dns:dns-tcp cluster IP" -m tcp --dport 53 -j KUBE-MARK-MASQ
-A KUBE-SVC-ERIFXISQEP7F7OF4 -m comment --comment "kube-system/kube-dns:dns-tcp -> 10.100.32.131:53" -m statistic --mode random --probability 0.50000000000 -j KUBE-SEP-APPOXWYHNPQM3A5Z
-A KUBE-SVC-ERIFXISQEP7F7OF4 -m comment --comment "kube-system/kube-dns:dns-tcp -> 10.100.32.134:53" -j KUBE-SEP-S5GWZTRHIEZICHHY
-A KUBE-SVC-I24EZXP75AX5E7TU ! -s 10.100.0.0/16 -d 10.107.98.137/32 -p tcp -m comment --comment "calico-apiserver/calico-api:apiserver cluster IP" -m tcp --dport 443 -j KUBE-MARK-MASQ
-A KUBE-SVC-I24EZXP75AX5E7TU -m comment --comment "calico-apiserver/calico-api:apiserver -> 10.100.32.132:5443" -m statistic --mode random --probability 0.50000000000 -j KUBE-SEP-YKESGSEGHCCTV6QQ
-A KUBE-SVC-I24EZXP75AX5E7TU -m comment --comment "calico-apiserver/calico-api:apiserver -> 10.100.32.133:5443" -j KUBE-SEP-LQDHZ5LYMUYXL3XD
-A KUBE-SVC-JD5MR3NA4I4DYORP ! -s 10.100.0.0/16 -d 10.96.0.10/32 -p tcp -m comment --comment "kube-system/kube-dns:metrics cluster IP" -m tcp --dport 9153 -j KUBE-MARK-MASQ
-A KUBE-SVC-JD5MR3NA4I4DYORP -m comment --comment "kube-system/kube-dns:metrics -> 10.100.32.131:9153" -m statistic --mode random --probability 0.50000000000 -j KUBE-SEP-HSXNI65L5G6ROKM2
-A KUBE-SVC-JD5MR3NA4I4DYORP -m comment --comment "kube-system/kube-dns:metrics -> 10.100.32.134:9153" -j KUBE-SEP-FYCEL5PE65U3XGWB
-A KUBE-SVC-NPX46M4PTMTKRN6Y ! -s 10.100.0.0/16 -d 10.96.0.1/32 -p tcp -m comment --comment "default/kubernetes:https cluster IP" -m tcp --dport 443 -j KUBE-MARK-MASQ
-A KUBE-SVC-NPX46M4PTMTKRN6Y -m comment --comment "default/kubernetes:https -> 10.0.17.5:6443" -j KUBE-SEP-DAHJWJT6IRVCCB67
-A KUBE-SVC-RK657RLKDNVNU64O ! -s 10.100.0.0/16 -d 10.108.73.191/32 -p tcp -m comment --comment "calico-system/calico-typha:calico-typha cluster IP" -m tcp --dport 5473 -j KUBE-MARK-MASQ
-A KUBE-SVC-RK657RLKDNVNU64O -m comment --comment "calico-system/calico-typha:calico-typha -> 10.0.17.5:5473" -m statistic --mode random --probability 0.50000000000 -j KUBE-SEP-U4EFYTTV7G7PJHK4
-A KUBE-SVC-RK657RLKDNVNU64O -m comment --comment "calico-system/calico-typha:calico-typha -> 10.0.17.7:5473" -j KUBE-SEP-O3U67ZARRXTZ6Q2H
-A KUBE-SVC-TCOU7JCQXEZGVUNU ! -s 10.100.0.0/16 -d 10.96.0.10/32 -p udp -m comment --comment "kube-system/kube-dns:dns cluster IP" -m udp --dport 53 -j KUBE-MARK-MASQ
-A KUBE-SVC-TCOU7JCQXEZGVUNU -m comment --comment "kube-system/kube-dns:dns -> 10.100.32.131:53" -m statistic --mode random --probability 0.50000000000 -j KUBE-SEP-7J3PXXC746AAT6A4
-A KUBE-SVC-TCOU7JCQXEZGVUNU -m comment --comment "kube-system/kube-dns:dns -> 10.100.32.134:53" -j KUBE-SEP-WSVKKSCEUEP4LICT
-A cali-OUTPUT -m comment --comment "cali:GBTAv2p5CwevEyJm" -j cali-fip-dnat
-A cali-POSTROUTING -m comment --comment "cali:Z-c7XtVd2Bq7s_hA" -j cali-fip-snat
-A cali-POSTROUTING -m comment --comment "cali:nYKhEzDlr11Jccal" -j cali-nat-outgoing
-A cali-POSTROUTING -o tunl0 -m comment --comment "cali:JHlpT-eSqR1TvyYm" -m addrtype ! --src-type LOCAL --limit-iface-out -m addrtype --src-type LOCAL -j MASQUERADE
-A cali-PREROUTING -m comment --comment "cali:r6XmIziWUJsdOK6Z" -j cali-fip-dnat
-A cali-nat-outgoing -m comment --comment "cali:Dw4T8UWPnCLxRJiI" -m set --match-set cali40masq-ipam-pools src -m set ! --match-set cali40all-ipam-pools dst -j MASQUERADE
COMMIT
# Completed on Mon Aug 26 10:08:53 2024
# Generated by iptables-save v1.4.21 on Mon Aug 26 10:08:53 2024
*mangle
:PREROUTING ACCEPT [23903764:2222993553]
:INPUT ACCEPT [72727980:11534571615]
:FORWARD ACCEPT [46262858:11639813782]
:OUTPUT ACCEPT [72829646:18961051116]
:POSTROUTING ACCEPT [118963288:30587484863]
:KUBE-IPTABLES-HINT - [0:0]
:KUBE-KUBELET-CANARY - [0:0]
:KUBE-PROXY-CANARY - [0:0]
:cali-POSTROUTING - [0:0]
:cali-PREROUTING - [0:0]
:cali-from-host-endpoint - [0:0]
:cali-to-host-endpoint - [0:0]
-A PREROUTING -m comment --comment "cali:6gwbT8clXdHdC1b1" -j cali-PREROUTING
-A POSTROUTING -m comment --comment "cali:O3lYWMrLQYEMJtB5" -j cali-POSTROUTING
-A cali-POSTROUTING -m comment --comment "cali:NX-7roTexQ3fGRfU" -m mark --mark 0x10000/0x10000 -j RETURN
-A cali-POSTROUTING -m comment --comment "cali:qaajsWArU1ku9saf" -m mark ! --mark 0x0/0xfff00000 -j RETURN
-A cali-POSTROUTING -m comment --comment "cali:N2faOPfc4DVQAfQj" -j MARK --set-xmark 0x0/0xf0000
-A cali-POSTROUTING -m comment --comment "cali:IR1ghU6yHNWsaaJF" -m conntrack --ctstate DNAT -j cali-to-host-endpoint
-A cali-POSTROUTING -m comment --comment "cali:fcjhvOBNywbfCkS2" -m comment --comment "Host endpoint policy accepted packet." -m mark --mark 0x10000/0x10000 -j RETURN
-A cali-PREROUTING -m comment --comment "cali:6BJqBjBC7crtA-7-" -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A cali-PREROUTING -m comment --comment "cali:KX7AGNd6rMcDUai6" -m mark --mark 0x10000/0x10000 -j ACCEPT
-A cali-PREROUTING -m comment --comment "cali:wNH7KsA3ILKJBsY9" -j cali-from-host-endpoint
-A cali-PREROUTING -m comment --comment "cali:Cg96MgVuoPm7UMRo" -m comment --comment "Host endpoint policy accepted packet." -m mark --mark 0x10000/0x10000 -j ACCEPT
COMMIT
# Completed on Mon Aug 26 10:08:53 2024
